--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Red+Hat+Display:400,400i,500,700,900&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Red+Hat+Text:400,400i,500,600,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Mono:ital,wght@0,400;0,500;1,400&display=swap");
@@ -7725,11 +7724,7 @@ input:focus {
   position: relative;
   text-align: left;
   box-sizing: border-box;
-  /* 
-  Dersom form fieldet har modden width-full, så fjernes max-width fra alle input elementer som fielden inneholder.
-  Det er bare field som trenger denne modden, alle inputs kan las være i fred.
-
-  Tanke: Følger ikke DRY ettersom vi setter samme styles på flere elementer. Både parent og child. Samme gjelder for inline fileds. */
+  /* Full width - Removes max width for all inputs */
 }
 .e-form-field__label {
   display: block;
@@ -7822,7 +7817,7 @@ input:focus {
 .e-form-field.e-form-field--compact input:disabled {
   color: #bdbdbd;
 }
-.e-form-field.e-form-field--width-full .e-input, .e-form-field.e-form-field--width-full .e-input > input, .e-form-field.e-form-field--width-full .e-input > textarea, .e-form-field.e-form-field--width-full .e-input > div, .e-form-field.e-form-field--combined.e-form-field--width-full > .e-form-field__input {
+.e-form-field.e-form-field--full-width .e-input, .e-form-field.e-form-field--full-width .e-input > input, .e-form-field.e-form-field--full-width .e-input > textarea, .e-form-field.e-form-field--full-width .e-input > div, .e-form-field.e-form-field--combined.e-form-field--full-width > .e-form-field__input {
   max-width: unset;
 }
 
@@ -7848,11 +7843,11 @@ input:focus {
 .e-inlined-field .e-form-field.e-form-field--medium {
   width: 140px;
 }
-.e-inlined-field .e-form-field.e-form-field--width-full {
+.e-inlined-field .e-form-field.e-form-field--full-width {
   max-width: unset;
   width: 100%;
 }
-.e-inlined-field.e-inlined-field--width-full, .e-inlined-field.e-inlined-field--width-full .e-input, .e-inlined-field.e-inlined-field--width-full input {
+.e-inlined-field.e-inlined-field--full-width, .e-inlined-field.e-inlined-field--full-width .e-input, .e-inlined-field.e-inlined-field--full-width input {
   max-width: unset;
 }
 
@@ -12211,6 +12206,23 @@ THE SOFTWARE.
   }
 }
 
+.e-title-large {
+  font-family: Red Hat Display, Verdana, sans-serif;
+  font-size: 44px;
+  line-height: 53px;
+  font-weight: 900;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+@media (max-width: 767px) {
+  .e-title-large {
+    font-size: 32px;
+    line-height: 34px;
+  }
+}
+
 .e-title-md {
   font-family: Red Hat Display, Verdana, sans-serif;
   font-size: 30px;
@@ -12223,6 +12235,23 @@ THE SOFTWARE.
 }
 @media (max-width: 767px) {
   .e-title-md {
+    font-size: 24px;
+    line-height: 29px;
+  }
+}
+
+.e-title-medium {
+  font-family: Red Hat Display, Verdana, sans-serif;
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+@media (max-width: 767px) {
+  .e-title-medium {
     font-size: 24px;
     line-height: 29px;
   }
@@ -12245,6 +12274,23 @@ THE SOFTWARE.
   }
 }
 
+.e-title-small {
+  font-family: Red Hat Display, Verdana, sans-serif;
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 700;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+@media (max-width: 767px) {
+  .e-title-small {
+    font-size: 20px;
+    line-height: 24px;
+  }
+}
+
 .e-title-xs {
   font-family: Red Hat Display, Verdana, sans-serif;
   font-size: 18px;
@@ -12257,6 +12303,22 @@ THE SOFTWARE.
 }
 @media (max-width: 767px) {
   .e-title-xs {
+    font-size: 16px;
+  }
+}
+
+.e-title-xsmall {
+  font-family: Red Hat Display, Verdana, sans-serif;
+  font-size: 18px;
+  line-height: 22px;
+  font-weight: 700;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+@media (max-width: 767px) {
+  .e-title-xsmall {
     font-size: 16px;
   }
 }
@@ -12330,6 +12392,28 @@ THE SOFTWARE.
   font-weight: 500;
 }
 
+.e-text-large {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 400;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+@media (max-width: 767px) {
+  .e-text-large {
+    font-size: 18px;
+    line-height: 29px;
+  }
+}
+
+.e-text-large b,
+.e-text-large strong {
+  font-weight: 500;
+}
+
 .e-text-body {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 20px;
@@ -12374,6 +12458,28 @@ THE SOFTWARE.
   font-weight: 500;
 }
 
+.e-text-large-strong {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 500;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+@media (max-width: 767px) {
+  .e-text-large-strong {
+    font-size: 18px;
+    line-height: 29px;
+  }
+}
+
+.e-text-large-strong b,
+.e-text-large-strong strong {
+  font-weight: 500;
+}
+
 .e-text-lg-light {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 20px;
@@ -12396,6 +12502,28 @@ THE SOFTWARE.
   font-weight: 500;
 }
 
+.e-text-large-light {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 400;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: #515151;
+}
+@media (max-width: 767px) {
+  .e-text-large-light {
+    font-size: 18px;
+    line-height: 29px;
+  }
+}
+
+.e-text-large-light b,
+.e-text-large-light strong {
+  font-weight: 500;
+}
+
 .e-text-md {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
@@ -12408,6 +12536,21 @@ THE SOFTWARE.
 }
 .e-text-md b,
 .e-text-md strong {
+  font-weight: 500;
+}
+
+.e-text-medium {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 16px;
+  line-height: 28px;
+  font-weight: 400;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+.e-text-medium b,
+.e-text-medium strong {
   font-weight: 500;
 }
 
@@ -12441,6 +12584,21 @@ THE SOFTWARE.
   font-weight: 500;
 }
 
+.e-text-medium-strong {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 16px;
+  line-height: 28px;
+  font-weight: 500;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+.e-text-medium-strong b,
+.e-text-medium-strong strong {
+  font-weight: 500;
+}
+
 .e-text-md-light {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
@@ -12456,6 +12614,21 @@ THE SOFTWARE.
   font-weight: 500;
 }
 
+.e-text-medium-light {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 16px;
+  line-height: 28px;
+  font-weight: 400;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: #515151;
+}
+.e-text-medium-light b,
+.e-text-medium-light strong {
+  font-weight: 500;
+}
+
 .e-text-sm {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 14px;
@@ -12468,6 +12641,21 @@ THE SOFTWARE.
 }
 .e-text-sm b,
 .e-text-sm strong {
+  font-weight: 500;
+}
+
+.e-text-small {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 400;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+.e-text-small b,
+.e-text-small strong {
   font-weight: 500;
 }
 
@@ -12501,6 +12689,21 @@ THE SOFTWARE.
   font-weight: 500;
 }
 
+.e-text-small-strong {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 500;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+.e-text-small-strong b,
+.e-text-small-strong strong {
+  font-weight: 500;
+}
+
 .e-text-sm-light {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 14px;
@@ -12513,6 +12716,21 @@ THE SOFTWARE.
 }
 .e-text-sm-light b,
 .e-text-sm-light strong {
+  font-weight: 500;
+}
+
+.e-text-small-light {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 400;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: #515151;
+}
+.e-text-small-light b,
+.e-text-small-light strong {
   font-weight: 500;
 }
 
