--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -2833,21 +2833,10 @@ input:focus {
 .e-input.e-input--centered > input {
   justify-content: center;
 }
-.e-input .e-input__icon {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  padding: 8px;
-  color: #000;
-  width: 40px;
-  height: 40px;
-}
-.e-input .e-btn.e-btn--icon, .e-input .e-input__icon {
+.e-input .e-btn.e-btn--icon {
   position: absolute;
   right: 4px;
   top: 4px;
-}
-.e-input .e-btn.e-btn--icon {
   cursor: pointer;
 }
 .e-input.e-input---invalid > input, .e-input.e-input---invalid > textarea,
@@ -2877,9 +2866,12 @@ input:focus {
   border-color: #bdbdbd;
   cursor: not-allowed;
 }
-.e-input.e-input---readonly > input,
-.e-input > input:read-only {
+.e-input.e-input---readonly > input, .e-input.e-input---readonly > input:focus,
+.e-input > input:read-only,
+.e-input > input:read-only:focus {
+  border: unset;
   cursor: not-allowed;
+  padding: 12px 16px;
 }
 .e-input input[type=date]::-webkit-calendar-picker-indicator,
 .e-input input[type=time]::-webkit-calendar-picker-indicator {
@@ -2931,59 +2923,38 @@ input:focus {
   border: 2px solid #29d305;
   padding: 3px 9px;
 }
-.e-form-field.e-form-field--compact .e-input input[readonly],
-.e-input.e-input--compact input[readonly] {
-  /* DRY */
-  border-color: inherit;
+.e-form-field.e-form-field--compact .e-input.e-input---readonly > input, .e-form-field.e-form-field--compact .e-input.e-input---readonly > input:focus,
+.e-form-field.e-form-field--compact .e-input > input:read-only,
+.e-form-field.e-form-field--compact .e-input > input:read-only:focus,
+.e-input.e-input--compact.e-input---readonly > input,
+.e-input.e-input--compact.e-input---readonly > input:focus,
+.e-input.e-input--compact > input:read-only,
+.e-input.e-input--compact > input:read-only:focus {
+  border: unset;
   cursor: not-allowed;
+  padding: 3px 9px;
 }
 .e-form-field.e-form-field--compact .e-input .e-btn.e-btn--icon,
-.e-form-field.e-form-field--compact .e-input .e-input__icon,
-.e-input.e-input--compact .e-btn.e-btn--icon,
-.e-input.e-input--compact .e-input__icon {
+.e-input.e-input--compact .e-btn.e-btn--icon {
   top: 1px;
   right: 1px;
   width: 32px;
   height: 32px;
 }
 .e-form-field.e-form-field--compact .e-input .e-btn.e-btn--icon .e-btn__icon,
-.e-form-field.e-form-field--compact .e-input .e-btn.e-btn--icon .e-input__icon,
-.e-form-field.e-form-field--compact .e-input .e-input__icon .e-btn__icon,
-.e-form-field.e-form-field--compact .e-input .e-input__icon .e-input__icon,
-.e-input.e-input--compact .e-btn.e-btn--icon .e-btn__icon,
-.e-input.e-input--compact .e-btn.e-btn--icon .e-input__icon,
-.e-input.e-input--compact .e-input__icon .e-btn__icon,
-.e-input.e-input--compact .e-input__icon .e-input__icon {
+.e-input.e-input--compact .e-btn.e-btn--icon .e-btn__icon {
   width: 16px;
   height: 16px;
 }
 .e-form-field.e-form-field--compact .e-input .e-btn.e-btn--icon .e-btn__icon i,
-.e-form-field.e-form-field--compact .e-input .e-btn.e-btn--icon .e-input__icon i,
-.e-form-field.e-form-field--compact .e-input .e-input__icon .e-btn__icon i,
-.e-form-field.e-form-field--compact .e-input .e-input__icon .e-input__icon i,
-.e-input.e-input--compact .e-btn.e-btn--icon .e-btn__icon i,
-.e-input.e-input--compact .e-btn.e-btn--icon .e-input__icon i,
-.e-input.e-input--compact .e-input__icon .e-btn__icon i,
-.e-input.e-input--compact .e-input__icon .e-input__icon i {
+.e-input.e-input--compact .e-btn.e-btn--icon .e-btn__icon i {
   width: 16px;
   height: 16px;
 }
 .e-form-field.e-form-field--compact .e-input .e-btn.e-btn--icon .e-btn__icon i img,
 .e-form-field.e-form-field--compact .e-input .e-btn.e-btn--icon .e-btn__icon i i,
-.e-form-field.e-form-field--compact .e-input .e-btn.e-btn--icon .e-input__icon i img,
-.e-form-field.e-form-field--compact .e-input .e-btn.e-btn--icon .e-input__icon i i,
-.e-form-field.e-form-field--compact .e-input .e-input__icon .e-btn__icon i img,
-.e-form-field.e-form-field--compact .e-input .e-input__icon .e-btn__icon i i,
-.e-form-field.e-form-field--compact .e-input .e-input__icon .e-input__icon i img,
-.e-form-field.e-form-field--compact .e-input .e-input__icon .e-input__icon i i,
 .e-input.e-input--compact .e-btn.e-btn--icon .e-btn__icon i img,
-.e-input.e-input--compact .e-btn.e-btn--icon .e-btn__icon i i,
-.e-input.e-input--compact .e-btn.e-btn--icon .e-input__icon i img,
-.e-input.e-input--compact .e-btn.e-btn--icon .e-input__icon i i,
-.e-input.e-input--compact .e-input__icon .e-btn__icon i img,
-.e-input.e-input--compact .e-input__icon .e-btn__icon i i,
-.e-input.e-input--compact .e-input__icon .e-input__icon i img,
-.e-input.e-input--compact .e-input__icon .e-input__icon i i {
+.e-input.e-input--compact .e-btn.e-btn--icon .e-btn__icon i i {
   width: 16px;
   height: 16px;
 }
