--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -2866,9 +2866,7 @@ input:focus {
   border-color: #bdbdbd;
   cursor: not-allowed;
 }
-.e-input.e-input---readonly > input, .e-input.e-input---readonly > input:focus,
-.e-input > input:read-only,
-.e-input > input:read-only:focus {
+.e-input.e-input---readonly > input, .e-input.e-input---readonly > input:focus, .e-input.e-input---readonly > input:read-only, .e-input.e-input---readonly > input:read-only:focus {
   border: unset;
   cursor: not-allowed;
   padding: 12px 16px;
@@ -2923,13 +2921,11 @@ input:focus {
   border: 2px solid #29d305;
   padding: 3px 9px;
 }
-.e-form-field.e-form-field--compact .e-input.e-input---readonly > input, .e-form-field.e-form-field--compact .e-input.e-input---readonly > input:focus,
-.e-form-field.e-form-field--compact .e-input > input:read-only,
-.e-form-field.e-form-field--compact .e-input > input:read-only:focus,
+.e-form-field.e-form-field--compact .e-input.e-input---readonly > input, .e-form-field.e-form-field--compact .e-input.e-input---readonly > input:focus, .e-form-field.e-form-field--compact .e-input.e-input---readonly > input:read-only, .e-form-field.e-form-field--compact .e-input.e-input---readonly > input:read-only:focus,
 .e-input.e-input--compact.e-input---readonly > input,
 .e-input.e-input--compact.e-input---readonly > input:focus,
-.e-input.e-input--compact > input:read-only,
-.e-input.e-input--compact > input:read-only:focus {
+.e-input.e-input--compact.e-input---readonly > input:read-only,
+.e-input.e-input--compact.e-input---readonly > input:read-only:focus {
   border: unset;
   cursor: not-allowed;
   padding: 3px 9px;
