--- a/packages/elvis/src/components/form/input.scss
+++ b/packages/elvis/src/components/form/input.scss
@@ -95,8 +95,8 @@ $form-input-padding-compact-active: 3px 9px;
     cursor: not-allowed;
   }
 
-  /* &.e-input---readonly > input,
-  &.e-input---readonly > input:focus, */
+  &.e-input---readonly > input,
+  &.e-input---readonly > input:focus,
   &.e-input---readonly > input:read-only,
   &.e-input---readonly > input:read-only:focus {
     border: unset;
@@ -147,8 +147,8 @@ $form-input-padding-compact-active: 3px 9px;
 
   &.e-input---readonly > input,
   &.e-input---readonly > input:focus,
-  > input:read-only,
-  > input:read-only:focus {
+  &.e-input---readonly > input:read-only,
+  &.e-input---readonly > input:read-only:focus {
     border: unset;
     cursor: not-allowed;
     padding: $form-input-padding-compact-active;
