--- a/packages/web/src/app/doc-pages/components/forms/checkbox-doc/checkbox-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/checkbox-doc/checkbox-doc.component.html
@@ -61,6 +61,7 @@
   <!-- SIZE -->
   <app-component-section [sectionTitle]="'Size'">
     <ng-container ngProjectAs="sectionContent">
+      Checkboxes come in two sizes: Normal and Compact.
       <app-component-example-v1 [interactable]="false" [codeHTML]="exampleSizes"></app-component-example-v1>
     </ng-container>
   </app-component-section>
