Update Percy test for checkboxes
rename small to compact
rename medium to normal

--- a/packages/elvis/percy/components/checkbox.html
+++ b/packages/elvis/percy/components/checkbox.html
@@ -18,12 +18,12 @@
       <label class="e-checkbox" for="elvis-checkbox-md">
         <input type="checkbox" id="elvis-checkbox-md" />
         <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Medium</span>
+        <span class="e-checkbox__label">Normal</span>
       </label>
-      <label class="e-checkbox e-checkbox--sm" for="elvis-checkbox-sm">
-        <input type="checkbox" id="elvis-checkbox-sm" />
+      <label class="e-checkbox e-checkbox--compact" for="elvis-checkbox-compact">
+        <input type="checkbox" id="elvis-checkbox-compact" />
         <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Small</span>
+        <span class="e-checkbox__label">Compact</span>
       </label>
     </form>
     <form>
