--- a/packages/elvis/percy/components/table.html
+++ b/packages/elvis/percy/components/table.html
@@ -458,7 +458,7 @@
         <thead>
           <tr class="e-table__select">
             <th scope="col">
-              <label class="e-checkbox e-checkbox--sm e-checkbox--indeterminate" for="overall-checkbox">
+              <label class="e-checkbox e-checkbox--compact e-checkbox--indeterminate" for="overall-checkbox">
                 <input type="checkbox" id="overall-checkbox" />
                 <span class="e-checkbox__mark"></span>
               </label>
@@ -470,7 +470,7 @@
         <tbody>
           <tr class="e-table__select e-table__select--selected">
             <td>
-              <label class="e-checkbox e-checkbox--sm" for="checkbox-first-cell">
+              <label class="e-checkbox e-checkbox--compact" for="checkbox-first-cell">
                 <input type="checkbox" id="checkbox-first-cell" checked />
                 <span class="e-checkbox__mark"></span>
               </label>
@@ -480,7 +480,7 @@
           </tr>
           <tr class="e-table__select">
             <td>
-              <label class="e-checkbox e-checkbox--sm" for="checkbox-second-cell">
+              <label class="e-checkbox e-checkbox--compact" for="checkbox-second-cell">
                 <input type="checkbox" id="checkbox-second-cell" />
                 <span class="e-checkbox__mark"></span>
               </label>
