--- a/packages/elvis/percy/components/input.html
+++ b/packages/elvis/percy/components/input.html
@@ -105,5 +105,52 @@
         <input id="normal" type="text" placeholder="Placeholder text" />
       </div>
     </div>
+
+    <!-- Normal field full width-->
+    <div class="e-form-field e-form-field--full-width">
+      <label class="e-form-field__label" for="width-full">Label</label>
+      <div class="e-input">
+        <input id="width-full" type="text" placeholder="Placeholder text" />
+      </div>
+    </div>
+
+    <!-- Inlined field 1 full width -->
+    <div class="e-inlined-field e-mt-24 e-inlined-field--full-width">
+      <div class="e-form-field e-form-field--medium">
+        <label class="e-form-field__label" for="zip">Zip code</label>
+        <div class="e-input">
+          <input id="zip" type="text" placeholder="Zip code" />
+        </div>
+      </div>
+      <div class="e-form-field">
+        <label class="e-form-field__label" for="city">City</label>
+        <div class="e-input">
+          <input id="city" type="text" placeholder="City" />
+        </div>
+      </div>
+    </div>
+
+    <!-- Inlined field 2 full width -->
+    <div class="e-form-field e-form-field--combined e-form-field--full-width">
+      <label class="e-form-field__label" for="phone">Phone</label>
+      <div class="e-form-field__input">
+        <div id="phone" class="e-input e-input--small">
+          <input type="text" value="+47" />
+        </div>
+        <div class="e-input">
+          <input type="text" placeholder="99 99 99 99" />
+        </div>
+      </div>
+    </div>
+
+    <!-- Compact input field full width -->
+    <div class="e-mt-16">
+      <div class="e-form-field e-form-field--compact e-form-field--full-width">
+        <label class="e-form-field__label" for="compact">Compact input field (full width)</label>
+        <div class="e-input">
+          <input id="compact" type="text" placeholder="Placeholder text" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
