--- a/packages/elvis/percy/components/search.html
+++ b/packages/elvis/percy/components/search.html
@@ -57,6 +57,60 @@
         </button>
       </div>
     </div>
+
+    <div class="e-title-xs e-my-16">Instant Search (Full width)</div>
+    <!-- Instant search width-full -->
+    <div class="e-form-field e-form-field--full-width e-my-16">
+      <div class="e-search e-search--instant">
+        <div class="e-input">
+          <input aria-label="Search" type="search" placeholder="Search" />
+        </div>
+        <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
+        <button class="e-btn e-btn--icon" aria-label="Tøm søkefelt">
+          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
+        </button>
+      </div>
+    </div>
+
+    <!-- Instant compact search width-full -->
+    <div class="e-form-field e-form-field--compact e-form-field--full-width e-my-16">
+      <div class="e-search e-search--instant">
+        <div class="e-input">
+          <input aria-label="Search" type="search" placeholder="Search" />
+        </div>
+        <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
+        <button class="e-btn e-btn--icon" aria-label="Tøm søkefelt">
+          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
+        </button>
+      </div>
+    </div>
+
+    <!-- Instant search searched width-full -->
+    <div class="e-form-field e-form-field--full-width e-my-16">
+      <div class="e-search e-search--instant e-search--searched">
+        <div class="e-input">
+          <input aria-label="Search" type="search" placeholder="Search" />
+        </div>
+        <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
+        <button class="e-btn e-btn--icon" aria-label="Tøm søkefelt">
+          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
+        </button>
+      </div>
+    </div>
+
+    <!-- Instant compact search searched width-full -->
+    <div class="e-form-field e-form-field--compact e-form-field--full-width e-my-16">
+      <div class="e-search e-search--instant e-search--searched">
+        <div class="e-input">
+          <input aria-label="Search" type="search" placeholder="Search" />
+        </div>
+        <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
+        <button class="e-btn e-btn--icon" aria-label="Tøm søkefelt">
+          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
+        </button>
+      </div>
+    </div>
+
     <div class="e-title-xs e-my-16">On Submit Search</div>
     <div class="e-inlined-field">
       <div class="e-form-field e-form-field--width-auto">
@@ -125,6 +179,91 @@
             <input aria-label="Search" type="search" placeholder="Search" />
           </div>
           <button class="e-btn e-btn--icon">
+            <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
+          </button>
+        </div>
+      </div>
+      <button class="e-btn e-btn--sm e-ml-16">
+        <span class="e-btn__icon">
+          <i class="e-icon e-icon--search-color e-icon--inverted" aria-hidden="true"></i>
+          <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
+        </span>
+        <span class="e-btn__title">Search</span>
+      </button>
+    </div>
+
+    <div class="e-title-xs e-my-16">On submit Search (Full width)</div>
+    <!-- On submit search width-full -->
+    <div class="e-inlined-field e-inlined-field--full-width e-my-16">
+      <div class="e-form-field">
+        <div class="e-search e-search--on-submit">
+          <div class="e-input">
+            <input aria-label="Search" type="search" placeholder="Search" />
+          </div>
+          <button class="e-btn e-btn--icon" aria-label="Tøm søkefelt">
+            <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
+          </button>
+        </div>
+      </div>
+      <button class="e-btn e-btn--lg e-ml-16">
+        <span class="e-btn__icon">
+          <i class="e-icon e-icon--search-color e-icon--inverted" aria-hidden="true"></i>
+          <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
+        </span>
+        <span class="e-btn__title">Search</span>
+      </button>
+    </div>
+
+    <!-- On submit compact width-full -->
+    <div class="e-inlined-field e-inlined-field--full-width e-my-16">
+      <div class="e-form-field e-form-field--compact">
+        <div class="e-search e-search--on-submit">
+          <div class="e-input">
+            <input aria-label="Search" type="search" placeholder="Search" />
+          </div>
+          <button class="e-btn e-btn--icon" aria-label="Tøm søkefelt">
+            <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
+          </button>
+        </div>
+      </div>
+      <button class="e-btn e-btn--sm e-ml-16">
+        <span class="e-btn__icon">
+          <i class="e-icon e-icon--search-color e-icon--inverted" aria-hidden="true"></i>
+          <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
+        </span>
+        <span class="e-btn__title">Search</span>
+      </button>
+    </div>
+
+    <!-- On submit search searched width-full -->
+    <div class="e-inlined-field e-inlined-field--full-width e-my-16">
+      <div class="e-form-field">
+        <div class="e-search e-search--on-submit e-search--searched">
+          <div class="e-input">
+            <input aria-label="Search" type="search" placeholder="Search" />
+          </div>
+          <button class="e-btn e-btn--icon" aria-label="Tøm søkefelt">
+            <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
+          </button>
+        </div>
+      </div>
+      <button class="e-btn e-btn--lg e-ml-16">
+        <span class="e-btn__icon">
+          <i class="e-icon e-icon--search-color e-icon--inverted" aria-hidden="true"></i>
+          <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
+        </span>
+        <span class="e-btn__title">Search</span>
+      </button>
+    </div>
+
+    <!-- On submit compact searched full width -->
+    <div class="e-inlined-field e-inlined-field--full-width e-my-16">
+      <div class="e-form-field e-form-field--compact">
+        <div class="e-search e-search--on-submit e-search--searched">
+          <div class="e-input">
+            <input aria-label="Search" type="search" placeholder="Search" />
+          </div>
+          <button class="e-btn e-btn--icon" aria-label="Tøm søkefelt">
             <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
           </button>
         </div>
