--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -7344,13 +7344,13 @@ input:focus {
   font-weight: 400;
   color: #000;
 }
-.e-checkbox.e-checkbox--compact .e-checkbox__mark {
+.e-checkbox.e-checkbox--compact .e-checkbox__mark, .e-checkbox.e-checkbox--sm .e-checkbox__mark {
   min-width: 16px;
   min-height: 16px;
   max-width: 16px;
   max-height: 16px;
 }
-.e-checkbox.e-checkbox--compact .e-checkbox__label {
+.e-checkbox.e-checkbox--compact .e-checkbox__label, .e-checkbox.e-checkbox--sm .e-checkbox__label {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 14px;
   line-height: 22px;
@@ -7362,17 +7362,17 @@ input:focus {
   color: #000;
   line-height: 16px;
 }
-.e-checkbox.e-checkbox--compact input {
+.e-checkbox.e-checkbox--compact input, .e-checkbox.e-checkbox--sm input {
   opacity: 0;
   position: absolute;
   z-index: -1;
 }
-.e-checkbox.e-checkbox--compact input:disabled:checked ~ .e-checkbox__mark {
+.e-checkbox.e-checkbox--compact input:disabled:checked ~ .e-checkbox__mark, .e-checkbox.e-checkbox--sm input:disabled:checked ~ .e-checkbox__mark {
   border-color: #bdbdbd;
   background-color: #f4f4f4;
   cursor: not-allowed;
 }
-.e-checkbox.e-checkbox--compact input:disabled:checked ~ .e-checkbox__mark:after, .e-checkbox.e-checkbox--compact input:disabled:checked ~ .e-checkbox__mark:before {
+.e-checkbox.e-checkbox--compact input:disabled:checked ~ .e-checkbox__mark:after, .e-checkbox.e-checkbox--compact input:disabled:checked ~ .e-checkbox__mark:before, .e-checkbox.e-checkbox--sm input:disabled:checked ~ .e-checkbox__mark:after, .e-checkbox.e-checkbox--sm input:disabled:checked ~ .e-checkbox__mark:before {
   background-color: #bdbdbd;
 }
 .e-checkbox.e-checkbox--indeterminate .e-checkbox__mark {
@@ -7389,7 +7389,7 @@ input:focus {
   border-radius: 1px;
   background: black;
 }
-.e-checkbox.e-checkbox--indeterminate.e-checkbox--compact .e-checkbox__mark::before {
+.e-checkbox.e-checkbox--indeterminate.e-checkbox--compact .e-checkbox__mark::before, .e-checkbox.e-checkbox--indeterminate.e-checkbox--sm .e-checkbox__mark::before {
   left: calc(50% - 4px);
   width: 8px;
   top: 50%;
@@ -7515,11 +7515,11 @@ input:focus {
   -webkit-animation: checkmarkWidth 150ms 150ms forwards;
   animation: checkmarkWidth 150ms 150ms forwards;
 }
-.e-checkbox.e-checkbox--compact input:checked ~ .e-checkbox__mark, .e-checkbox.e-checkbox--compact[class$=e-checkbox---checked] .e-checkbox__mark, .e-checkbox.e-checkbox--compact[class$=disabled-checked] .e-checkbox__mark {
+.e-checkbox.e-checkbox--compact input:checked ~ .e-checkbox__mark, .e-checkbox.e-checkbox--sm input:checked ~ .e-checkbox__mark, .e-checkbox.e-checkbox--compact[class$=e-checkbox---checked] .e-checkbox__mark, .e-checkbox.e-checkbox--sm[class$=e-checkbox---checked] .e-checkbox__mark, .e-checkbox.e-checkbox--compact[class$=disabled-checked] .e-checkbox__mark, .e-checkbox.e-checkbox--sm[class$=disabled-checked] .e-checkbox__mark {
   position: relative;
   background-color: #29d305;
 }
-.e-checkbox.e-checkbox--compact input:checked ~ .e-checkbox__mark::before, .e-checkbox.e-checkbox--compact[class$=e-checkbox---checked] .e-checkbox__mark::before, .e-checkbox.e-checkbox--compact[class$=disabled-checked] .e-checkbox__mark::before {
+.e-checkbox.e-checkbox--compact input:checked ~ .e-checkbox__mark::before, .e-checkbox.e-checkbox--sm input:checked ~ .e-checkbox__mark::before, .e-checkbox.e-checkbox--compact[class$=e-checkbox---checked] .e-checkbox__mark::before, .e-checkbox.e-checkbox--sm[class$=e-checkbox---checked] .e-checkbox__mark::before, .e-checkbox.e-checkbox--compact[class$=disabled-checked] .e-checkbox__mark::before, .e-checkbox.e-checkbox--sm[class$=disabled-checked] .e-checkbox__mark::before {
   content: "";
   position: absolute;
   top: 50%;
@@ -7541,7 +7541,7 @@ input:focus {
   -webkit-animation: checkmarkHeightCompact 150ms;
   animation: checkmarkHeightCompact 150ms;
 }
-.e-checkbox.e-checkbox--compact input:checked ~ .e-checkbox__mark::after, .e-checkbox.e-checkbox--compact[class$=e-checkbox---checked] .e-checkbox__mark::after, .e-checkbox.e-checkbox--compact[class$=disabled-checked] .e-checkbox__mark::after {
+.e-checkbox.e-checkbox--compact input:checked ~ .e-checkbox__mark::after, .e-checkbox.e-checkbox--sm input:checked ~ .e-checkbox__mark::after, .e-checkbox.e-checkbox--compact[class$=e-checkbox---checked] .e-checkbox__mark::after, .e-checkbox.e-checkbox--sm[class$=e-checkbox---checked] .e-checkbox__mark::after, .e-checkbox.e-checkbox--compact[class$=disabled-checked] .e-checkbox__mark::after, .e-checkbox.e-checkbox--sm[class$=disabled-checked] .e-checkbox__mark::after {
   content: "";
   position: absolute;
   bottom: 15%;
@@ -7984,7 +7984,7 @@ input:focus {
 .e-radio:not(:last-child) {
   margin-bottom: 8px;
 }
-.e-radio.e-radio--compact {
+.e-radio.e-radio--compact, .e-radio.e-radio--sm {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 14px;
   line-height: 22px;
@@ -7995,47 +7995,47 @@ input:focus {
   color: inherit;
   color: #000;
 }
-.e-radio.e-radio--compact:not(:last-child) {
+.e-radio.e-radio--compact:not(:last-child), .e-radio.e-radio--sm:not(:last-child) {
   margin-bottom: 0px;
 }
-.e-radio.e-radio--compact input {
+.e-radio.e-radio--compact input, .e-radio.e-radio--sm input {
   opacity: 0;
   outline: none;
   position: absolute;
   z-index: -1;
 }
-.e-radio.e-radio--compact input:checked ~ .e-radio__mark {
+.e-radio.e-radio--compact input:checked ~ .e-radio__mark, .e-radio.e-radio--sm input:checked ~ .e-radio__mark {
   border-color: #000;
 }
-.e-radio.e-radio--compact input:focus ~ .e-radio__mark {
+.e-radio.e-radio--compact input:focus ~ .e-radio__mark, .e-radio.e-radio--sm input:focus ~ .e-radio__mark {
   outline: 2px solid #0064fa;
   outline-offset: 2px;
 }
-.e-radio.e-radio--compact input:invalid ~ .e-radio__mark {
+.e-radio.e-radio--compact input:invalid ~ .e-radio__mark, .e-radio.e-radio--sm input:invalid ~ .e-radio__mark {
   border-color: #ee0701;
 }
-.e-radio.e-radio--compact input:disabled ~ .e-radio__mark {
+.e-radio.e-radio--compact input:disabled ~ .e-radio__mark, .e-radio.e-radio--sm input:disabled ~ .e-radio__mark {
   border-color: #bdbdbd;
   background: #f4f4f4;
   cursor: not-allowed;
 }
-.e-radio.e-radio--compact input:disabled ~ .e-radio__label {
+.e-radio.e-radio--compact input:disabled ~ .e-radio__label, .e-radio.e-radio--sm input:disabled ~ .e-radio__label {
   color: #676767;
   cursor: not-allowed;
 }
-.e-radio.e-radio--compact input:disabled:checked ~ .e-radio__mark {
+.e-radio.e-radio--compact input:disabled:checked ~ .e-radio__mark, .e-radio.e-radio--sm input:disabled:checked ~ .e-radio__mark {
   border-color: #bdbdbd;
   background: #f4f4f4;
   cursor: not-allowed;
 }
-.e-radio.e-radio--compact input:disabled:checked ~ .e-radio__mark:before, .e-radio.e-radio--compact input:disabled:checked ~ .e-radio__mark:after {
+.e-radio.e-radio--compact input:disabled:checked ~ .e-radio__mark:before, .e-radio.e-radio--compact input:disabled:checked ~ .e-radio__mark:after, .e-radio.e-radio--sm input:disabled:checked ~ .e-radio__mark:before, .e-radio.e-radio--sm input:disabled:checked ~ .e-radio__mark:after {
   background-color: #a8a8a8;
 }
-.e-radio.e-radio--compact input:disabled:checked ~ .e-radio__label {
+.e-radio.e-radio--compact input:disabled:checked ~ .e-radio__label, .e-radio.e-radio--sm input:disabled:checked ~ .e-radio__label {
   color: #676767;
   cursor: not-allowed;
 }
-.e-radio.e-radio--compact .e-radio__mark {
+.e-radio.e-radio--compact .e-radio__mark, .e-radio.e-radio--sm .e-radio__mark {
   width: 16px;
   height: 16px;
 }
@@ -8097,13 +8097,13 @@ input:focus {
   -webkit-animation: fadeIn 250ms linear both;
   animation: fadeIn 250ms linear both;
 }
-.e-radio.e-radio--compact[class$=e-radio---disabled-checked] .e-radio__mark, .e-radio.e-radio--compact[class$=e-radio---checked] .e-radio__mark, .e-radio.e-radio--compact input:checked ~ .e-radio__mark {
+.e-radio.e-radio--compact[class$=e-radio---disabled-checked] .e-radio__mark, .e-radio.e-radio--sm[class$=e-radio---disabled-checked] .e-radio__mark, .e-radio.e-radio--compact[class$=e-radio---checked] .e-radio__mark, .e-radio.e-radio--sm[class$=e-radio---checked] .e-radio__mark, .e-radio.e-radio--compact input:checked ~ .e-radio__mark, .e-radio.e-radio--sm input:checked ~ .e-radio__mark {
   background-color: #29d305;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.e-radio.e-radio--compact[class$=e-radio---disabled-checked] .e-radio__mark:before, .e-radio.e-radio--compact[class$=e-radio---checked] .e-radio__mark:before, .e-radio.e-radio--compact input:checked ~ .e-radio__mark:before {
+.e-radio.e-radio--compact[class$=e-radio---disabled-checked] .e-radio__mark:before, .e-radio.e-radio--sm[class$=e-radio---disabled-checked] .e-radio__mark:before, .e-radio.e-radio--compact[class$=e-radio---checked] .e-radio__mark:before, .e-radio.e-radio--sm[class$=e-radio---checked] .e-radio__mark:before, .e-radio.e-radio--compact input:checked ~ .e-radio__mark:before, .e-radio.e-radio--sm input:checked ~ .e-radio__mark:before {
   content: "";
   height: 8px;
   width: 8px;
@@ -8190,14 +8190,14 @@ input:focus {
   position: absolute;
   top: 0px;
 }
-.e-radio.e-radio--compact .e-radio__mark {
+.e-radio.e-radio--compact .e-radio__mark, .e-radio.e-radio--sm .e-radio__mark {
   top: 3px;
 }
 .e-radio__label {
   flex-grow: 1;
   margin-left: 32px;
 }
-.e-radio.e-radio--compact .e-radio__label {
+.e-radio.e-radio--compact .e-radio__label, .e-radio.e-radio--sm .e-radio__label {
   margin-left: 24px;
 }
 
