--- a/packages/elvis/src/components/form/radiobutton.scss
+++ b/packages/elvis/src/components/form/radiobutton.scss
@@ -27,7 +27,8 @@ $form-radiobutton-mark-border: 1px solid colors.color('elvia-off');
     margin-bottom: 8px;
   }
 
-  &.e-radio--compact {
+  &.e-radio--compact,
+  &.e-radio--sm {
     @include typography.typography('text-sm');
     color: colors.color('font-color');
 
@@ -195,7 +196,8 @@ $form-radiobutton-mark-border: 1px solid colors.color('elvia-off');
     }
   }
   // extends correct radiomark for compact radiobuttons
-  &.e-radio--compact[class$='e-radio---checked'] &__mark {
+  &.e-radio--compact[class$='e-radio---checked'] &__mark,
+  &.e-radio--sm[class$='e-radio---checked'] &__mark {
     @extend %radiobutton-mark--compact;
   }
 
@@ -229,7 +231,8 @@ $form-radiobutton-mark-border: 1px solid colors.color('elvia-off');
     }
   }
   // extends correct radiomark for compact radiobuttons
-  &.e-radio--compact[class$='e-radio---disabled-checked'] &__mark {
+  &.e-radio--compact[class$='e-radio---disabled-checked'] &__mark,
+  &.e-radio--sm[class$='e-radio---disabled-checked'] &__mark {
     @extend %radiobutton-mark--compact;
   }
 
@@ -256,7 +259,8 @@ $form-radiobutton-mark-border: 1px solid colors.color('elvia-off');
     position: absolute;
     top: 0px;
   }
-  &.e-radio--compact {
+  &.e-radio--compact,
+  &.e-radio--sm {
     .e-radio__mark {
       top: 3px;
     }
@@ -265,7 +269,8 @@ $form-radiobutton-mark-border: 1px solid colors.color('elvia-off');
     flex-grow: 1;
     margin-left: 32px;
   }
-  &.e-radio--compact {
+  &.e-radio--compact,
+  &.e-radio--sm {
     .e-radio__label {
       margin-left: 24px;
     }
